Remove List.of() calls as they do not exist in Java 8